@@ -57,6 +57,7 @@ def build(bld):
                  stream_test.cc
                  test.cc
                  threed_test.cc
+                 update_checker_test.cc
                  upmixer_a_test.cc
                  util_test.cc
                  video_decoder_fill_test.cc
